--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Recipes2"
         tools:targetApi="31">
+
+        <activity
+            android:name=".StoperFragment"
+            android:exported="false" />
+
+        <activity
+            android:name=".TimerActivity"
+            android:exported="true">
+
+        </activity>
+
         <activity
             android:name=".DetailActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Recipes2"
-            android:exported="true">
+            android:theme="@style/Theme.Recipes2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -28,10 +40,10 @@
             android:theme="@style/Theme.Recipes2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
